myteo/test/parser/ast/type/malformed_error.exp
ERROR: test/parser/ast/type/malformed_error.myte:3:7 Unexpected token "1", expected start of type
 3 | val x: 1 = 1;
   |        ^