myteo/test/parser/ast/type/malformed_error.myte
module Test

val x: 1 = 1;